Implement mouse moving technology

--- a/shooting_gallery/lib/shooting_gallery_web/templates/page/game.html.eex
+++ b/shooting_gallery/lib/shooting_gallery_web/templates/page/game.html.eex
@@ -1,12 +1,17 @@
-<script>
- window.gameName = "<%= @name %>";
+<script>  
+  //window.onload = function() {
+    //console.log(localStorage.getItem("playerName"));
+    //window.playerName = localStorage.getItem("playerName");
+    window.gameName = "<%= @name %>";
+  //}
+
 </script>
 
 <div class="row">
   <div class="column">
     <h1>Shooting Gallery Game: <%= @name %></h1>
     <div id="root">
-      React component loading...
+      <p>React component loading...</p>
     </div>
   </div>
 </div>
