--- a/shooting_gallery/lib/shooting_gallery_web/templates/page/game.html.eex
+++ b/shooting_gallery/lib/shooting_gallery_web/templates/page/game.html.eex
@@ -9,7 +9,8 @@
 
 <div class="row">
   <div class="column">
-    <h1>Shooting Gallery Game: <%= @name %></h1>
+    <h1>Shooting Gallery Game</h1>
+    <h2>Game board: <%= @name %></h2>
     <div id="root">
       <p>React component loading...</p>
     </div>
